# X-0-game

./: .gitignore  CMakeLists.txt  README.md  Readme.md  board.cpp  board.hpp  direction.cpp  direction.hpp  engine.cpp  engine.hpp  main.cpp  makefile  player.cpp  player.hpp  symbol.cpp  symbol.hpp  test_main.cpp  ui.cpp  ui.hpp
core/: board.cpp  board.hpp  direction.cpp  direction.hpp  player.cpp  player.hpp  symbol.cpp  symbol.hpp
engine/: engine.cpp  engine.hpp
html/: abstract_ui_8hpp.html  abstract_ui_8hpp.js  abstract_ui_8hpp_source.html  annotated.html  annotated_dup.js  board_8hpp.html  board_8hpp_source.html  class_abstract_u_i-members.html  class_abstract_u_i.html  class_abstract_u_i.js  class_board-members.html  class_board.html  class_board.js  class_engine-members.html  class_engine.html  class_engine.js  class_player-members.html  class_player.html  class_player.js  class_u_i-members.html  class_u_i.html  class_u_i.js  classes.html  dir_1788f8309b1a812dcb800a185471cf6c.html  dir_1788f8309b1a812dcb800a185471cf6c.js  dir_4270bfced15e0e73154b13468c7c9ad9.html  dir_4270bfced15e0e73154b13468c7c9ad9.js  dir_996f45160da62e1a3d7f6046fad68f51.html  dir_996f45160da62e1a3d7f6046fad68f51.js  direction_8hpp.html  direction_8hpp_source.html  doxygen_crawl.html  engine_8hpp.html  engine_8hpp_source.html  files.html  files_dup.js  functions.html  functions_func.html  functions_rela.html  functions_vars.html  (+17 more)
latex/: abstract_ui_8hpp.tex  abstract_ui_8hpp_source.tex  annotated.tex  board_8hpp.tex  board_8hpp_source.tex  class_abstract_u_i.eps  class_abstract_u_i.tex  (+19 more)
(+40 files in other folders)
